kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zapisnikar-deployment
  labels:
    app: zapisnikar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zapisnikar
  template:
    metadata:
      labels:
        app: zapisnikar
    spec:
      volumes:
        - name: zapisnikar-storage
          emptyDir: {}
      containers:
        - name: zapisnikar
          image: zapisnikar
          volumeMounts:
            - name: zapisnikar-storage
              mountPath: /storage
          command:
            - gunicorn
            - zapisniki.wsgi:application
            - -b
            - 0.0.0.0:8000
            - --log-level
            - DEBUG
            - --workers
            - "1"
            - --threads
            - "3"
            - --timeout
            - "120"
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
            limits:
              memory: 400Mi
              cpu: 200m
        - name: zapisnikar-huey
          image: zapisnikar
          volumeMounts:
            - name: zapisnikar-storage
              mountPath: /storage
          command:
            - "python"
            - "manage.py"
            - "run_huey"
            - "--workers"
            - "1"
            - "--worker-type"
            - "thread"
          resources:
            requests:
              memory: 400Mi
              cpu: 200m
        - name: zapisnikar-nginx
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          image: nginx:alpine
          volumeMounts:
            - name: zapisnikar-storage
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              memory: 100Mi
              cpu: 100m
            limits:
              memory: 100Mi
              cpu: 100m
