kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://zapisnikar.danesjenovdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zapisnikar
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - zapisnikar.danesjenovdan.si
      secretName: zapisnikar-tls
  rules:
    - host: zapisnikar.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zapisnikar
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zapisnikar-nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: zapisnikar-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - files.zapisnikar.danesjenovdan.si
      secretName: zapisnikar-nginx-tls
  rules:
    - host: files.zapisnikar.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zapisnikar-nginx
                port:
                  number: 80
